tests/typechecker/should_pass/overload_builtins_comp.csp
P = {union | union <- {1,2,3}}

pick({x}) = x

X = pick(P)+2
