tests/typechecker/should_fail/override_tock.csp
id(_) = 1

Timed (id) {
        
}

f = tock + 1
